apply optimization